# Polypythia-SL

./: .gitignore  CONFIRMATION_muon_context.md  CONFIRMATION_v2_draw_averaged.md  CONFIRMATION_v3_lora.md  CONFIRMATION_v4_dose_response.md  EXPERIMENTS.md  PLAN_student_inheritance.md  README.md  SL_REPLICATION_STATUS.md  appellate_court.md  pyproject.toml  requirements-lock.txt
configs/: checkpoint_cotangent_port_assay_v1.json  confirm_capstone_student.yaml  confirm_v2.yaml  confirm_v2_heldout.yaml  confirm_v2_save.yaml  confirm_v3.yaml  confirm_v3_heldout.yaml  confirm_v3_save.yaml  crossover_students.yaml  dose_10epoch.yaml  dose_pilot.yaml  ds2_adam_source_continuation_v1.json  ds2_adam_source_factorial_v1.json  ds2_numeric_wolf_block_reanalysis_v1.json  ds_student_io.yaml  ds_student_iostar.yaml  ds_teacher.yaml  effective_weight_checkpoint_trace_v1.json  effective_weight_component_dissection_v1.json  effective_weight_endpoint_content_v1.json  h3_fullft_student.yaml  lion_teacher.yaml  local_pilot.yaml  muon_context_4k.yaml  muon_context_confirm.yaml  muon_counterfactual_1k.yaml  muon_finetuned_teacher_1k.yaml  natural_muon_teacher_512.yaml  numeric_channel_jacobian_v1.json  numeric_fingerprint_compatibility_v1.json  numeric_fingerprint_dynamics_v1.json  numeric_fingerprint_endpoints_v1.json  numeric_fingerprint_optimizer_transplant_v1.json  numeric_fingerprint_update_geometry_v1.json  numeric_wolf_cross_gradient_localization_v1.json  numeric_wolf_local_factorization_v1.json  optimizer_anatomy_reanalysis_v1.json  pilot2x2_student_io.yaml  pilot2x2_student_istar.yaml  (+22 more)
(+62 files in other folders)
