[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polypythia-sl"
version = "0.1.0"
description = "Local PolyPythia subliminal-learning pilot"
requires-python = ">=3.11"
dependencies = [
  "numpy>=2.0",
  "peft>=0.19",
  "pyyaml>=6.0",
  "scipy>=1.12",
  "torch>=2.7",
  "tqdm>=4.67",
  "transformers>=4.53,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
